...

            OutlinedTextField(
                value = student.name,
                onValueChange = { onEvent(StudentDetailEvent.StudentChange(student.copy(name = it))) },
                label = { Text(stringResource(id = R.string.student_detail_student_name)) },
                enabled = isEditMode,
                modifier = Modifier.fillMaxWidth().testTag("name_field"),
                leadingIcon = { Icon(Icons.Default.Person, contentDescription = stringResource(R.string.cd_person_icon)) },
                colors = OutlinedTextFieldDefaults.colors(
                    disabledTextColor = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.8f),
                    disabledBorderColor = MaterialTheme.colorScheme.outline.copy(alpha = 0.5f),
                    disabledLabelColor = MaterialTheme.colorScheme.onSurfaceVariant,
                    disabledLeadingIconColor = MaterialTheme.colorScheme.onSurfaceVariant
...
                onValueChange = {
                    val age = it.toIntOrNull() ?: 0
                    onEvent(StudentDetailEvent.StudentChange(student.copy(age = age)))
                },
                label = { Text(stringResource(id = R.string.student_detail_age)) },
                enabled = isEditMode,
                modifier = Modifier.fillMaxWidth().testTag("age_field"),
                leadingIcon = { Icon(Icons.Default.Cake, contentDescription = stringResource(R.string.cd_age_icon)) },
                colors = OutlinedTextFieldDefaults.colors(
                    disabledTextColor = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.8f),
                    disabledBorderColor = MaterialTheme.colorScheme.outline.copy(alpha = 0.5f),
                    disabledLabelColor = MaterialTheme.colorScheme.onSurfaceVariant,
                    disabledLeadingIconColor = MaterialTheme.colorScheme.onSurfaceVariant
...
        ) {
            OutlinedTextField(
                value = student.course,
                onValueChange = { onEvent(StudentDetailEvent.StudentChange(student.copy(course = it))) },
                label = { Text(stringResource(id = R.string.student_detail_course)) },
                enabled = isEditMode,
                modifier = Modifier.fillMaxWidth().testTag("course_field"),
                leadingIcon = { Icon(Icons.Default.School, contentDescription = stringResource(R.string.cd_school_icon)) }
            )

            Spacer(modifier = Modifier.height(12.dp))

            OutlinedTextField(
...
