...
        ) {
            OutlinedTextField(
                value = state.priceInput,
                onValueChange = { onEvent(StudentDetailEvent.PriceChange(it)) },
                label = { Text(stringResource(id = R.string.student_detail_price_per_hour)) },
                enabled = isEditMode,
                modifier = Modifier.fillMaxWidth().testTag("price_field"),
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Decimal)
            )

            if (!isNewStudent) {
                Spacer(modifier = Modifier.height(16.dp))

...
